compiler/rustc_mlir/src/ffi.rs

//! Raw FFI bindings to the mlir-wrapper C++ library.
//!
//! This module provides unsafe FFI declarations for the C functions exported
//! by the mlir-wrapper. These are low-level bindings; prefer using the safe
//! wrappers in the `triton` and `context` modules.

use std::ffi::{c_char, c_int, c_void};
use std::os::raw::c_uint;

/// Result enum matching MLIRRustResult from C++
#[repr(C)]
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum MLIRRustResult {
    Success = 0,
    Failure = 1,
}

impl MLIRRustResult {
    pub fn is_success(self) -> bool {
        self == MLIRRustResult::Success
    }

    pub fn is_failure(self) -> bool {
        self == MLIRRustResult::Failure
    }
}

/// String reference (non-owning) matching MLIRStringRef from C++
#[repr(C)]
#[derive(Debug, Clone, Copy)]
pub struct MLIRStringRef {
    pub data: *const c_char,
    pub length: usize,
}

impl MLIRStringRef {
    /// Create a string ref from a Rust string slice
    pub fn from_str(s: &str) -> Self {
        MLIRStringRef {
            data: s.as_ptr() as *const c_char,
            length: s.len(),
        }
    }

    /// Create an empty string ref
    pub fn empty() -> Self {
        MLIRStringRef {
            data: std::ptr::null(),
            length: 0,
        }
    }
}

impl From<&str> for MLIRStringRef {
    fn from(s: &str) -> Self {
        MLIRStringRef::from_str(s)
    }
}

impl From<&String> for MLIRStringRef {
    fn from(s: &String) -> Self {
        MLIRStringRef::from_str(s.as_str())
    }
}

// Opaque types from C++
// These are never instantiated in Rust; we only use pointers to them

/// Opaque MLIR context
#[repr(C)]
pub struct MLIRContext {
    _private: [u8; 0],
}

/// Opaque MLIR location
#[repr(C)]
pub struct MLIRLocation {
    _private: [u8; 0],
}

/// Opaque MLIR module
#[repr(C)]
pub struct MLIRModule {
    _private: [u8; 0],
}

/// Opaque MLIR operation
#[repr(C)]
pub struct MLIROperation {
    _private: [u8; 0],
}

/// Opaque MLIR block
#[repr(C)]
pub struct MLIRBlock {
    _private: [u8; 0],
}

/// Opaque MLIR region
#[repr(C)]
pub struct MLIRRegion {
    _private: [u8; 0],
}

/// Opaque MLIR type
#[repr(C)]
pub struct MLIRType {
    _private: [u8; 0],
}

/// Opaque MLIR attribute
#[repr(C)]
pub struct MLIRAttribute {
    _private: [u8; 0],
}

/// Opaque MLIR value
#[repr(C)]
pub struct MLIRValue {
    _private: [u8; 0],
}

/// Opaque MLIR OpBuilder
#[repr(C)]
pub struct MLIROpBuilder {
    _private: [u8; 0],
}

/// Opaque dialect registry
#[repr(C)]
pub struct MLIRDialectRegistry {
    _private: [u8; 0],
}

/// Opaque operation state
#[repr(C)]
pub struct MLIROperationState {
    _private: [u8; 0],
}

// Type aliases for pointers (matching the C typedefs)
pub type MLIRContextRef = *mut MLIRContext;
pub type MLIRLocationRef = *mut MLIRLocation;
pub type MLIRModuleRef = *mut MLIRModule;
pub type MLIROperationRef = *mut MLIROperation;
pub type MLIRBlockRef = *mut MLIRBlock;
pub type MLIRRegionRef = *mut MLIRRegion;
pub type MLIRTypeRef = *mut MLIRType;
pub type MLIRAttributeRef = *mut MLIRAttribute;
pub type MLIRValueRef = *mut MLIRValue;
pub type MLIROpBuilderRef = *mut MLIROpBuilder;
pub type MLIRDialectRegistryRef = *mut MLIRDialectRegistry;
pub type MLIROperationStateRef = *mut MLIROperationState;

#[link(name = "mlir-wrapper", kind = "static")]
extern "C" {
    //=========================================================================
    // String operations
    //=========================================================================

    pub fn mlirStringRefCreateFromCString(str: *const c_char) -> MLIRStringRef;
    pub fn mlirStringRefCreate(data: *const c_char, length: usize) -> MLIRStringRef;

    //=========================================================================
    // Context operations
    //=========================================================================

    pub fn mlirRustContextCreate() -> MLIRContextRef;
    pub fn mlirRustContextDestroy(ctx: MLIRContextRef);
    pub fn mlirRustContextEnableMultithreading(ctx: MLIRContextRef, enable: c_int);
    pub fn mlirRustContextSetAllowUnregisteredDialects(ctx: MLIRContextRef, allow: c_int);
    pub fn mlirRustContextLoadAllAvailableDialects(ctx: MLIRContextRef);
    pub fn mlirRustContextGetNumLoadedDialects(ctx: MLIRContextRef) -> usize;

    //=========================================================================
    // Dialect registry operations
    //=========================================================================

    pub fn mlirRustDialectRegistryCreate() -> MLIRDialectRegistryRef;
    pub fn mlirRustDialectRegistryDestroy(registry: MLIRDialectRegistryRef);
    pub fn mlirRustContextAppendDialectRegistry(
        ctx: MLIRContextRef,
        registry: MLIRDialectRegistryRef,
    );

    //=========================================================================
    // Location operations
    //=========================================================================

    pub fn mlirRustLocationUnknownGet(ctx: MLIRContextRef) -> MLIRLocationRef;
    pub fn mlirRustLocationFileLineColGet(
        ctx: MLIRContextRef,
        filename: MLIRStringRef,
        line: c_uint,
        col: c_uint,
    ) -> MLIRLocationRef;
    pub fn mlirRustLocationNameGet(
        ctx: MLIRContextRef,
        name: MLIRStringRef,
        child_loc: MLIRLocationRef,
    ) -> MLIRLocationRef;

    //=========================================================================
    // Module operations
    //=========================================================================

    pub fn mlirRustModuleCreateEmpty(loc: MLIRLocationRef) -> MLIRModuleRef;
    pub fn mlirRustModuleCreateParse(
        ctx: MLIRContextRef,
        module_str: MLIRStringRef,
    ) -> MLIRModuleRef;
    pub fn mlirRustModuleDestroy(module: MLIRModuleRef);
    pub fn mlirRustModuleGetBody(module: MLIRModuleRef) -> MLIRBlockRef;
    pub fn mlirRustModuleGetOperation(module: MLIRModuleRef) -> MLIROperationRef;
    pub fn mlirRustModuleGetContext(module: MLIRModuleRef) -> MLIRContextRef;
    pub fn mlirRustModulePrint(module: MLIRModuleRef) -> *mut c_char;
    pub fn mlirRustModuleVerify(module: MLIRModuleRef) -> MLIRRustResult;

    //=========================================================================
    // OpBuilder operations
    //=========================================================================

    pub fn mlirRustOpBuilderCreate(ctx: MLIRContextRef) -> MLIROpBuilderRef;
    pub fn mlirRustOpBuilderCreateAtBlockEnd(block: MLIRBlockRef) -> MLIROpBuilderRef;
    pub fn mlirRustOpBuilderDestroy(builder: MLIROpBuilderRef);
    pub fn mlirRustOpBuilderSetInsertionPointToEnd(
        builder: MLIROpBuilderRef,
        block: MLIRBlockRef,
    );
    pub fn mlirRustOpBuilderSetInsertionPointToStart(
        builder: MLIROpBuilderRef,
        block: MLIRBlockRef,
    );
    pub fn mlirRustOpBuilderSetInsertionPoint(builder: MLIROpBuilderRef, op: MLIROperationRef);
    pub fn mlirRustOpBuilderSetInsertionPointAfter(
        builder: MLIROpBuilderRef,
        op: MLIROperationRef,
    );
    pub fn mlirRustOpBuilderGetContext(builder: MLIROpBuilderRef) -> MLIRContextRef;
    pub fn mlirRustOpBuilderGetInsertionBlock(builder: MLIROpBuilderRef) -> MLIRBlockRef;

    //=========================================================================
    // Type operations
    //=========================================================================

    pub fn mlirRustTypeGetContext(ty: MLIRTypeRef) -> MLIRContextRef;
    pub fn mlirRustTypeIsInteger(ty: MLIRTypeRef) -> c_int;
    pub fn mlirRustTypeIsFloat(ty: MLIRTypeRef) -> c_int;
    pub fn mlirRustTypeIsIndex(ty: MLIRTypeRef) -> c_int;
    pub fn mlirRustIntegerTypeGet(ctx: MLIRContextRef, width: c_uint) -> MLIRTypeRef;
    pub fn mlirRustIntegerTypeSignlessGet(ctx: MLIRContextRef, width: c_uint) -> MLIRTypeRef;
    pub fn mlirRustIntegerTypeSignedGet(ctx: MLIRContextRef, width: c_uint) -> MLIRTypeRef;
    pub fn mlirRustIntegerTypeUnsignedGet(ctx: MLIRContextRef, width: c_uint) -> MLIRTypeRef;
    pub fn mlirRustIndexTypeGet(ctx: MLIRContextRef) -> MLIRTypeRef;
    pub fn mlirRustF16TypeGet(ctx: MLIRContextRef) -> MLIRTypeRef;
    pub fn mlirRustBF16TypeGet(ctx: MLIRContextRef) -> MLIRTypeRef;
    pub fn mlirRustF32TypeGet(ctx: MLIRContextRef) -> MLIRTypeRef;
    pub fn mlirRustF64TypeGet(ctx: MLIRContextRef) -> MLIRTypeRef;
    pub fn mlirRustNoneTypeGet(ctx: MLIRContextRef) -> MLIRTypeRef;

    //=========================================================================
    // Attribute operations
    //=========================================================================

    pub fn mlirRustUnitAttrGet(ctx: MLIRContextRef) -> MLIRAttributeRef;
    pub fn mlirRustBoolAttrGet(ctx: MLIRContextRef, value: c_int) -> MLIRAttributeRef;
    pub fn mlirRustIntegerAttrGet(ty: MLIRTypeRef, value: i64) -> MLIRAttributeRef;
    pub fn mlirRustFloatAttrGet(ty: MLIRTypeRef, value: f64) -> MLIRAttributeRef;
    pub fn mlirRustStringAttrGet(ctx: MLIRContextRef, value: MLIRStringRef) -> MLIRAttributeRef;
    pub fn mlirRustTypeAttrGet(ty: MLIRTypeRef) -> MLIRAttributeRef;
    pub fn mlirRustFlatSymbolRefAttrGet(
        ctx: MLIRContextRef,
        symbol: MLIRStringRef,
    ) -> MLIRAttributeRef;

    //=========================================================================
    // Operation state operations
    //=========================================================================

    pub fn mlirRustOperationStateCreate(
        name: MLIRStringRef,
        loc: MLIRLocationRef,
    ) -> MLIROperationStateRef;
    pub fn mlirRustOperationStateDestroy(state: MLIROperationStateRef);
    pub fn mlirRustOperationStateAddResults(
        state: MLIROperationStateRef,
        n: usize,
        results: *const MLIRTypeRef,
    );
    pub fn mlirRustOperationStateAddOperands(
        state: MLIROperationStateRef,
        n: usize,
        operands: *const MLIRValueRef,
    );
    pub fn mlirRustOperationStateAddAttribute(
        state: MLIROperationStateRef,
        name: MLIRStringRef,
        attr: MLIRAttributeRef,
    );
    pub fn mlirRustOperationStateAddOwnedRegions(
        state: MLIROperationStateRef,
        n: usize,
        regions: *const MLIRRegionRef,
    );
    pub fn mlirRustOperationStateAddSuccessors(
        state: MLIROperationStateRef,
        n: usize,
        successors: *const MLIRBlockRef,
    );

    //=========================================================================
    // Operation operations
    //=========================================================================

    pub fn mlirRustOperationCreate(state: MLIROperationStateRef) -> MLIROperationRef;
    pub fn mlirRustOperationDestroy(op: MLIROperationRef);
    pub fn mlirRustOperationGetNumResults(op: MLIROperationRef) -> usize;
    pub fn mlirRustOperationGetResult(op: MLIROperationRef, pos: usize) -> MLIRValueRef;
    pub fn mlirRustOperationGetNumOperands(op: MLIROperationRef) -> usize;
    pub fn mlirRustOperationGetOperand(op: MLIROperationRef, pos: usize) -> MLIRValueRef;
    pub fn mlirRustOperationGetBlock(op: MLIROperationRef) -> MLIRBlockRef;
    pub fn mlirRustOperationGetNumRegions(op: MLIROperationRef) -> usize;
    pub fn mlirRustOperationGetRegion(op: MLIROperationRef, pos: usize) -> MLIRRegionRef;
    pub fn mlirRustOperationPrint(op: MLIROperationRef) -> *mut c_char;

    //=========================================================================
    // Block operations
    //=========================================================================
